// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterRangeContent /> should not crash if min equals max 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid transparent;
  width: 60%;
}

.emotion-5:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-5:hover {
  border: 1px solid #808080;
}

<div>
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "clip.length",
        "type": "range",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "clip.length",
          "type": "range",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        1
      </span>
      <span>
        1
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1,
            1.001,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.1}
        values={
          Array [
            1,
            1.001,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        MIN
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={1}
        />
      </label>
      <label
        className="emotion-4"
      >
        MAX
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={1.001}
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`<FilterRangeContent /> should render with file sizes and reset 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid transparent;
  width: 60%;
}

.emotion-5:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-5:hover {
  border: 1px solid #808080;
}

<div>
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "source.filesize",
        "type": "range",
        "values": Object {
          "max": 8000,
          "min": 200,
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "source.filesize",
          "type": "range",
          "values": Object {
            "max": 8000,
            "min": 200,
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        180 Bytes
      </span>
      <span>
        8.3 KB
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            180,
            8525,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.1}
        values={
          Array [
            200,
            8000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        MIN
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={200}
        />
      </label>
      <label
        className="emotion-4"
      >
        MAX
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={8000}
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`<FilterRangeContent /> should render with file sizes and reset 2`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid transparent;
  width: 60%;
}

.emotion-5:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-5:hover {
  border: 1px solid #808080;
}

<div>
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "source.filesize",
        "type": "range",
        "values": Object {
          "max": 8000,
          "min": 200,
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "source.filesize",
          "type": "range",
          "values": Object {
            "max": 8000,
            "min": 200,
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        180 Bytes
      </span>
      <span>
        8.3 KB
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            180,
            8525,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.1}
        values={
          Array [
            200,
            8000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        MIN
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={200}
        />
      </label>
      <label
        className="emotion-4"
      >
        MAX
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={8000}
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`<FilterRangeContent /> should render with file sizes and reset 3`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid transparent;
  width: 60%;
}

.emotion-5:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-5:hover {
  border: 1px solid #808080;
}

<div>
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "source.filesize",
        "type": "range",
        "values": Object {
          "max": 8000,
          "min": 200,
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "source.filesize",
          "type": "range",
          "values": Object {
            "max": 8000,
            "min": 200,
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        180 Bytes
      </span>
      <span>
        8.3 KB
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            180,
            8525,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.1}
        values={
          Array [
            200,
            8000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        MIN
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={200}
        />
      </label>
      <label
        className="emotion-4"
      >
        MAX
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={8000}
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`<FilterRangeContent /> should render with file sizes and reset 4`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid transparent;
  width: 60%;
}

.emotion-5:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-5:hover {
  border: 1px solid #808080;
}

<div>
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "source.filesize",
        "type": "range",
        "values": Object {
          "max": 8000,
          "min": 200,
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "source.filesize",
          "type": "range",
          "values": Object {
            "max": 8000,
            "min": 200,
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        180 Bytes
      </span>
      <span>
        8.3 KB
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            180,
            8525,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.1}
        values={
          Array [
            180,
            8525,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        MIN
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={180}
        />
      </label>
      <label
        className="emotion-4"
      >
        MAX
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={8525}
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`<FilterRangeContent /> should render with no data 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 24px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid transparent;
  width: 60%;
}

.emotion-5:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-5:hover {
  border: 1px solid #808080;
}

<div>
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "clip.length",
        "type": "range",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "clip.length",
          "type": "range",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        0
      </span>
      <span>
        1
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            0,
            1,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={0.1}
        values={
          Array [
            0,
            1,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        MIN
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={0}
        />
      </label>
      <label
        className="emotion-4"
      >
        MAX
          
        <input
          className="emotion-5"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyPress={[Function]}
          type="text"
          value={1}
        />
      </label>
    </div>
  </div>
</div>
`;
